--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,18 +1,42 @@
-<% content_for :footer_scripts do %>
-<script>
-  <% if flash[:swal] %>
-    swal({
-        title: "<%= flash[:swal][0] %>",
-        text: "<%= flash[:swal][1] %>",
-        type: "<%= flash[:swal][2] %>",
-        showCancelButton: true,
-        confirmButtonColor: "#DD6B55",
-        confirmButtonText: "Aceptar",
-        cancelButtonText: "Cancelar",
-        closeOnConfirm: true,
-        closeOnCancel: true
-      });
-  <% end %>
-</script>
-<%end%>
-<%= flash[:swal] = ["Orden Cancelada","Se canceló correctamente la orden","success"] %>
+<section class="mt-5 bg-primary text-white mb-0" id="index">
+  <div class="container">
+    <h2 class="text-center text-uppercase text-white">List of articles</h2>
+    <hr class="star-light mb-5">
+    <div class="table-responsive">
+      <table class="table table-hover">
+        <thead class="thead-dark">
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Title</th>
+            <th scope="col">Description</th>
+            <th scope="col">Created at</th>
+            <th scope="col">Updated at</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @articles.each_with_index do |article, i| %>
+            <tr>
+              <th scope="row"><%= i + 1 %></th>
+              <td><%= article.title %></td>
+              <td><%= truncate(article.description, length: 30, separator: ' ') %></td>
+              <td><%= article.created_at.strftime("%d/%m/%y %R") %></td>
+              <td><%= article.updated_at.strftime("%d/%m/%y %R") %></td>
+              <td>
+                <%= link_to edit_article_path(article), class:"text-white" do %>
+                  <%= icon('fas', 'edit') %>
+                <% end %>
+                <%= link_to article_path(article), class:"text-white" do %>
+                  <%= icon('fas', 'eye', style:"margin: 0 5px") %>
+                <% end %>
+                <%= link_to article_path(article), class:"text-white", method: :delete do %>
+                  <%= icon('fas', 'trash') %>
+                <% end %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</section>
