--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,17 +1,6 @@
 <section class="mt-5 bg-primary text-white mb-0" id="new article">
   <div class="container">
     <h2 class="text-center text-uppercase text-white">Create an article</h2>
-    <hr class="star-light mb-5">
-    <%= form_for @article do |f| %>
-      <div class="form-group">
-        <%= f.label :title %>
-        <%= f.text_field :title, class: "form-control" %>
-      </div>
-      <div class="form-group">
-        <%= f.label :description %>
-        <%= f.text_area :description, class: "form-control" %>
-      </div>
-      <%= f.submit class: "btn btn-secondary", id: "form_submit", disabled: true, data: {confirm: "Success", swal: {"text":"Article successfully created","type":"success","title":"Success"}} %>
-    <% end %>
+    <%= render "form" %>
   </div>
 </section>
