--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Alpha Blog</a>
+        <%= link_to 'Alpha Blog', root_path, class: "navbar-brand js-scroll-trigger" %>
         <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
@@ -29,7 +29,7 @@
               <%= link_to 'About', about_path, class: "nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" %>
             </li>
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact</a>
+              <%= link_to 'Blog', articles_path, class: "nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" %>
             </li>
           </ul>
         </div>
