--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,4 @@
-<header class="masthead bg-primary text-white text-center">
-  <div class="container">
-    <h1 class="text-uppercase mb-0">Home Page</h1>
-    <hr class="star-light">
-    <h2 class="font-weight-light mb-0">Web Developer - Graphic Artist - User Experience Designer</h2>
-  </div>
-</header>
+<div class="jumbotron text-center">
+  <h1>Alpha Blog</h1>
+  <%= link_to "Sign Up Now", "#", class: "btn btn-primary btn-lg btn-xlarge" %>
+</div>
