--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,16 +1,16 @@
-<hr class="star-light mb-5">
+<%= render "shared/errors", obj: @article %>
 <%= form_for @article do |f| %>
-    <div class="form-group">
-        <%= f.label :title %>
-        <%= f.text_field :title, class: "form-control" %>
-    </div>
-    <div class="form-group">
-        <%= f.label :description %>
-        <%= f.text_area :description, class: "form-control" %>
-    </div>
-    <% if current_page?(action: "new") %>
-        <%= f.submit class: "btn btn-secondary", id: "form_submit", disabled: true, data: {swal: {"text":"Article successfully created","type":"success","title":"Success"}} %>
-    <% else %>    
-        <%= f.submit class: "btn btn-secondary", id: "form_submit", data: {swal: {"text":"Article successfully created","type":"success","title":"Success"}} %>
-    <% end %>
+  <div class="form-group">
+    <%= f.label :title %>
+    <%= f.text_field :title, class: "form-control" %>
+  </div>
+  <div class="form-group">
+    <%= f.label :description %>
+    <%= f.text_area :description, class: "form-control" %>
+  </div>
+  <%= f.submit class: "btn btn-secondary", id: "form_submit" %>
+
+  <div class="text-center">
+    [ <%= link_to "Cancel request and return to articles list", articles_path %> ]
+  </div>
 <% end %>
