--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,6 +1,4 @@
-<section class="mt-5 bg-primary text-white mb-0" id="edit article">
-  <div class="container">
-    <h2 class="text-center text-uppercase text-white">Edit an article</h2>
-    <%= render "form" %>
-  </div>
-</section>
+<div class="container">
+  <h2 class="text-center">Edit an article</h2>
+  <%= render "form" %>
+</div>
