--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,16 @@
 <div class="container">
-  <h2 class="text-center"><%= @article.title %></h2>
-  <p class="lead"><%= @article.description%></p>
-  <%= link_to "Back to article list", articles_path %>
-  <%= link_to "Edit this article", edit_article_path(@article) %>
+  <div class="card text-center">
+    <div class="card-header">
+      <%= @article.title %>
+    </div>
+    <div class="card-body">
+      <p class="card-text"><%= @article.description %></p>
+      <%= link_to "Back to article list", articles_path, class: "btn btn-sm btn-primary" %>
+      <%= link_to "Edit this article", edit_article_path(@article), class: "btn btn-sm btn-success" %>
+      <%= link_to "Delete this article", article_path(@article), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-sm btn-danger" %>
+    </div>
+    <div class="card-footer text-muted">
+      <%= @article.created_at %>
+    </div>
+  </div>
 </div>
