--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -37,27 +37,27 @@
   padding: 6px 12px;
 }
 
-footer {
+.footer {
   margin-top: 45px;
   padding-top: 5px;
   border-top: 1px solid #eaeaea;
   color: #777;
 }
 
-footer a:hover {
+.footer a:hover {
   color: #222;
 }
 
-footer small {
+.footer small {
   float: left;
 }
 
-footer ul {
+.footer ul {
   float: right;
   list-style: none;
 }
 
-footer ul li {
+.footer ul li {
   float: left;
   margin-left: 15px;
 }
