--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -11,16 +11,29 @@
       <div class="card-body">
         <blockquote class="blockquote mb-0">
           <p><%= truncate(article.description, length: 100, separator: ' ') %></p>
-          <footer>
-            <%= link_to edit_article_path(article) do %>
-              <%= icon('fas', 'edit') %>
-            <% end %>
-            <%= link_to article_path(article) do %>
-              <%= icon('fas', 'eye', style:"margin: 0 5px") %>
-            <% end %>
-            <%= link_to article_path(article), method: :delete do %>
-              <%= icon('fas', 'trash') %>
-            <% end %>
+          <footer class="footer" style="font-size: 90%;">
+            <small>
+              Created by: <%= article.user ? article.user.username : "Anónimo" %>,
+              <%= time_ago_in_words(article.created_at) %> ago,
+              Last updated: <%= time_ago_in_words(article.updated_at) %> ago.
+            </small>
+            <ul style="margin: 0px;">
+              <li>
+                <%= link_to article_path(article) do %>
+                  <%= icon('fas', 'eye', style:"margin: 0 5px") %>
+                <% end %>
+              </li>
+              <li>
+                <%= link_to edit_article_path(article) do %>
+                  <%= icon('fas', 'edit') %>
+                <% end %>
+              </li>
+              <li>
+                <%= link_to article_path(article), method: :delete do %>
+                  <%= icon('fas', 'trash') %>
+                <% end %>
+              </li>
+            </ul>
           </footer>
         </blockquote>
       </div>
