--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -2,11 +2,11 @@
 <%= form_for @article do |f| %>
   <div class="form-group">
     <%= f.label :title %>
-    <%= f.text_field :title, class: "form-control" %>
+    <%= f.text_field :title, class: "form-control", placeholder:"Enter title", autofocus: true %>
   </div>
   <div class="form-group">
     <%= f.label :description %>
-    <%= f.text_area :description, class: "form-control" %>
+    <%= f.text_area :description, class: "form-control", placeholder: "Enter description" %>
   </div>
   <%= f.submit class: "btn btn-secondary", id: "form_submit" %>
 
