--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
   <footer class="footer">
     <small>
-      Copyright &copy; <a href="enter in a link here">The Complete Ruby on Rails Developer</a>
-      by <a href="enter in a link here">Mashrur Hossain</a>
+      Copyright &copy; <a href="#">The Complete Ruby on Rails Developer</a>
+      by <a href="#">Victor Vega</a>
     </small>
     <nav>
       <ul>
