--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,10 +1,12 @@
 <% flash.each do |name, msg| %>
-  <div class="alert alert-<%= "#{name}" %> alert-dismissible fade show" role="alert">
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-      <span aria-hidden="true">&times;</span>
-    </button>
-    <div id="flash_<%= "#{name}" %>">
-      <%= msg %>
+  <div class="container">
+    <div class="alert alert-<%= "#{name}" %> alert-dismissible fade show" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+      <div id="flash_<%= "#{name}" %>">
+        <%= msg %>
+      </div>
     </div>
   </div>
 <% end %>
