--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,20 +1,2 @@
-<%= render "shared/errors", obj: @user %>
-<%= form_for @user do |f| %>
-  <div class="form-group">
-    <%= f.label :username %>
-    <%= f.text_field :username, class: "form-control" %>
-  </div>
-  <div class="form-group">
-    <%= f.label :email %>
-    <%= f.email_field :email, class: "form-control" %>
-  </div>
-  <div class="form-group">
-    <%= f.label :password %>
-    <%= f.password_field :password, class: "form-control" %>
-  </div>
-  <%= f.submit "Sign up", class: "btn btn-secondary", id: "form_submit" %>
-
-  <div class="text-center">
-    [ <%= link_to "Cancel request and return to articles list", articles_path %> ]
-  </div>
-<% end %>
+<h2 class="text-center">Signup for Alpha Blog</h2>
+<%= render "form" %>
