--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,15 +10,8 @@
         <%= link_to "Articles", articles_path, class: "nav-link" %> <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <%= link_to "Users", users_path, class: "nav-link" %> <span class="sr-only">(current)</span></a>
       </li>
-    </ul>
-    <!-- Buscador, implementación pendiente -->
-    <%# <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form> %>
-    <ul class="navbar-nav">
       <% if logged_in? %>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -31,13 +24,27 @@
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
         </li>
-        <li class="nav-item">
-          <%= link_to "Sign out", signout_path, method: :delete, class: "nav-link" %>
+      <% end %>
+    </ul>
+    <!-- Buscador, implementación pendiente -->
+    <%# <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form> %>
+    <ul class="navbar-nav">
+      <% if logged_in? %>
+        <li class="nav-item dropdown" style="margin-right: 40px;">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Your Profile <%= "(Admin)" if current_user.admin? %>
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <%= link_to "View your profile", user_path(current_user), class: "dropdown-item" %>
+            <%= link_to "Edit your profile", edit_user_path(current_user), class: "dropdown-item" %>
+            <div class="dropdown-divider"></div>
+            <%= link_to "Sign out", signout_path, method: :delete, class: "dropdown-item" %>
+          </div>
         </li>
       <% else %>
-        <li class="nav-item">
-          <%= link_to "Sign up", signup_path, class: "nav-link" %>
-        </li>
         <li class="nav-item">
           <%= link_to "Sign in", signin_path, class: "nav-link" %>
         </li>
