--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="jumbotron text-center">
+<div class="jumbotron text-center" style="padding: 20px 32px">
   <h1>ALPHA BLOG</h1>
-  <%= link_to "Sign up now", "#", class: "btn btn-danger btn-lg btn-xlarge" %>
+  <%= link_to "Sign up now", signup_path, class: "btn btn-danger btn-lg btn-xlarge" %>
 </div>
